src/objects/MT_MediaBroadcastImportData__c.object
<CustomObject>
    <fields>
        <fullName>MT_CampaignID__c</fullName>
        <label>Campaign ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_LastExport__c</fullName>
        <label>Last Export</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_MB1__c</fullName>
        <label>MB1</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MB3__c</fullName>
        <label>MB3</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MN3__c</fullName>
        <label>MN3</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_OrderType__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Sponsoring</fullName>
                </value>
                <value>
                    <fullName>Overbooking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_ProSaOrderID__c</fullName>
        <label>ProSa Order ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_SenderName__c</fullName>
        <label>TV Sender Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_SenderNumber__c</fullName>
        <label>Sender Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_Timeslot__c</fullName>
        <label>Timeslot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1.[06-09]</fullName>
                </value>
                <value>
                    <fullName>2.[09-13]</fullName>
                </value>
                <value>
                    <fullName>3.[13-17]</fullName>
                </value>
                <value>
                    <fullName>4.[17-20]</fullName>
                </value>
                <value>
                    <fullName>5.[20-23]</fullName>
                </value>
                <value>
                    <fullName>6.[23-01]</fullName>
                </value>
                <value>
                    <fullName>7.[01-06]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Media Broadcast Import Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>MT_CampaignID__c</columns>
        <columns>MT_ProSaOrderID__c</columns>
        <columns>MT_Month__c</columns>
        <columns>MT_Status__c</columns>
        <columns>MT_SenderName__c</columns>
        <columns>MT_Timeslot__c</columns>
        <columns>MT_MB1__c</columns>
        <columns>MT_MB3__c</columns>
        <columns>MT_MN3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MBID-{00000000}</displayFormat>
        <label>Media Broadcast Import Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Broadcast Import Data</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyBrutVolume</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(ISBLANK(MT_MB1__c), ISNULL(MT_MB1__c)), IF(OR(ISBLANK(MT_MB3__c), ISNULL(MT_MB3__c)), true, MT_MB3__c &lt; 0), MT_MB1__c &lt; 0)</errorConditionFormula>
        <errorMessage>Bitte einen Wert &gt;=0 in MB1 oder MB3 eintragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyCampaignId</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(MT_CampaignID__c), ISNULL(MT_CampaignID__c))</errorConditionFormula>
        <errorDisplayField>MT_CampaignID__c</errorDisplayField>
        <errorMessage>Bitte eine KampagnenID eintragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyChannelName</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(MT_SenderName__c)</errorConditionFormula>
        <errorDisplayField>MT_SenderName__c</errorDisplayField>
        <errorMessage>Bitte einen Sendernamen eintragen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyChannelNumber</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(MT_SenderNumber__c)</errorConditionFormula>
        <errorDisplayField>MT_SenderNumber__c</errorDisplayField>
        <errorMessage>Bitte eine Sendernummer eintragen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyMonth</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(MT_Month__c), ISNULL(MT_Month__c))</errorConditionFormula>
        <errorDisplayField>MT_Month__c</errorDisplayField>
        <errorMessage>Bitte einen Monat eingeben.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyNetVolume</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(MT_MN3__c),ISNULL(MT_MN3__c), MT_MN3__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>MT_MN3__c</errorDisplayField>
        <errorMessage>Bitte einen Wert &gt;=0 eintragen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_EmptyProSaOrderId</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISBLANK(MT_ProSaOrderID__c), ISNULL(MT_ProSaOrderID__c))</errorConditionFormula>
        <errorDisplayField>MT_ProSaOrderID__c</errorDisplayField>
        <errorMessage>Bitte eine ProSa Auftragsnummer hinzufügen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_InvalidMonth</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR(MT_Month__c) &lt; 2015 || YEAR(MT_Month__c) &gt; 2099</errorConditionFormula>
        <errorDisplayField>MT_Month__c</errorDisplayField>
        <errorMessage>Das Jahr liegt außerhalb des zulässigen Bereichs 2015 - 2099.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_BC_ImportData_InvalidTimeslot</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(OR(ISPICKVAL(MT_Timeslot__c, &apos;1.[06-09]&apos;),ISPICKVAL(MT_Timeslot__c, &apos;2.[09-13]&apos;),ISPICKVAL(MT_Timeslot__c, &apos;3.[13-17]&apos;),ISPICKVAL(MT_Timeslot__c, &apos;4.[17-20]&apos;),ISPICKVAL(MT_Timeslot__c, &apos;5.[20-23]&apos;),ISPICKVAL(MT_Timeslot__c, &apos;6.[23-01]&apos;),ISPICKVAL(MT_Timeslot__c, &apos;7.[01-06]&apos;)))</errorConditionFormula>
        <errorDisplayField>MT_Timeslot__c</errorDisplayField>
        <errorMessage>Unbekannte Zeitschiene</errorMessage>
    </validationRules>
</CustomObject>